[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://tests/scripts/Testbed.gd" id="1"]

[node name="Component_Testbed" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(280, 0)
size_flags_vertical = 3

[node name="LoadButton" type="Button" parent="HBoxContainer/VBoxContainer"]
text = "Load EntityData"

[node name="LoadedFileLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
text = "No EntityData loaded"
autowrap_mode = 3

[node name="SaveButton" type="Button" parent="HBoxContainer/VBoxContainer"]
text = "Save EntityData"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal = false

[node name="ComponentDisplay" type="VBoxContainer" parent="HBoxContainer/ScrollContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FileDialog" type="FileDialog" parent="."]
title = "Select EntityData Resource"
file_mode = 0
access = 2
filters = PackedStringArray("*.tres ; EntityData Resources")
